Working on bounds checking - ZoomPreview widget

--- a/tests/zoom_preview.css
+++ b/tests/zoom_preview.css
@@ -32,3 +32,11 @@
   width: 200px;
   height: 200px;
 }
+
+.mw_zoom_preview.mw_container.mw_thumbnails{
+ height: auto;
+}
+
+.mw_zoom_preview.mw_container.mw_thumbnails > li{
+  display: inline-block;
+}
