--- a/tests/zoom_preview.css
+++ b/tests/zoom_preview.css
@@ -1,4 +1,4 @@
-.mw_zoom_preview.mw_container {
+.mw_zoom_container {
     width: 204px;
     height: 204px;
     overflow: hidden;
@@ -6,12 +6,12 @@
     position: relative;
 }
 
-.mw_zoom_image.mw_container {
+.mw_zoom_image {
    position: absolute;
    z-index: 20;
 }
 
-.mw_zoom_preview.mw_button {
+.mw_zoom_button {
    z-index: 30;
    border: 1px solid black;
    width: 62px;
@@ -22,21 +22,25 @@
    background-color: #BBBBBB;
 }
 
-.mw_container.mw_normal_image{
+.mw_zoom_thumbnails{
+ height: auto;
+}
+
+.mw_zoom_thumbnails > li{
+  display: inline-block;
+}
+
+
+/* Un-related CSS */
+
+.normal_image{
   width: 200px;
   height: 200px;
   margin: 2px;
 }
 
-.mw_container.mw_normal_image img{
+.normal_image img{
   width: 200px;
   height: 200px;
 }
 
-.mw_zoom_preview.mw_thumbnails{
- height: auto;
-}
-
-.mw_zoom_preview.mw_thumbnails > li{
-  display: inline-block;
-}
