--- a/tests/toggler.css
+++ b/tests/toggler.css
@@ -17,7 +17,9 @@
 }
 
 
-/* Popup example */
+/* Popup examples */
+
+/* Lazy styling */
 
 div[name='Dialog'] *[data-ur-component='button'] {
   border-radius: 5px;
@@ -41,5 +43,39 @@ div[name='Dialog'] *[data-ur-component='content'] {
 
 div[name='Dialog'] *[data-ur-component='content'][data-ur-state='enabled'] {
   display: block;
+}
+
+
+/* Proper Styling */
+
+.popup_button {
   
+}
+
+.popup_content {
+  position: absolute;
+  border-radius: 5px;
+  background-color: #AAAAAA;
+  width: 500px;
+  height: 500px;
+  left: 200px;
+/*  bottom: 50px;*/
+  text-align: center;
+  padding-top: 30px;
+}
+
+.popup_content[data-ur-state='enabled'] {
+  display: none;
+}
+
+.popup_content[data-ur-state='enabled'] {
+  display: inline-block;
+}
+
+/* multiple example */
+[name='MultipleContents'] .popup_content {
+  position: relative;
+  width: 400px;
+
+  padding: 20px;
 }
