--- a/tests/css/toggler.css
+++ b/tests/css/toggler.css
@@ -1,18 +1,18 @@
-*[data-ur-component='button'] { 
+*[data-ur-toggler-component='button'] { 
   opacity: 0.5;
   background-color: #33CC00;	
 }
 
-*[data-ur-component='content'] {
+*[data-ur-toggler-component='content'] {
   display:none;
   background-color: #BBCCFF;
 }
 
-*[data-ur-component='button'][data-ur-state='enabled'] {
+*[data-ur-toggler-component='button'][data-ur-state='enabled'] {
   opacity: 1.0;
 }
 
-*[data-ur-component='content'][data-ur-state='enabled'] {
+*[data-ur-toggler-component='content'][data-ur-state='enabled'] {
   display: block;
 }
 
@@ -21,14 +21,14 @@
 
 /* Lazy styling */
 
-div[name='Dialog'] *[data-ur-component='button'] {
+div[name='Dialog'] *[data-ur-toggler-component='button'] {
   border-radius: 5px;
   background-color: #77F;
   opacity: 1.0;
   padding: 5px;
 }
 
-div[name='Dialog'] *[data-ur-component='content'] {
+div[name='Dialog'] *[data-ur-toggler-component='content'] {
   display: none;
   position: absolute;
   border-radius: 5px;
@@ -41,7 +41,7 @@ div[name='Dialog'] *[data-ur-component='content'] {
   padding-top: 30px;
 }
 
-div[name='Dialog'] *[data-ur-component='content'][data-ur-state='enabled'] {
+div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
   display: block;
 }
 
@@ -112,6 +112,6 @@ div[name='Dialog'] *[data-ur-component='content'][data-ur-state='enabled'] {
   height: 200px;
 }
 
-[name='MultipleContents'] [data-ur-component="content"] {
+[name='MultipleContents'] [data-ur-toggler-component="content"] {
   display: inline-block;
 }
