--- a/tests/css/carousel.css
+++ b/tests/css/carousel.css
@@ -1,17 +1,17 @@
-[data-ur-carousel-component='view_container'] {
+div[data-ur-carousel-component='view_container'] {
   height: 200px;
-  width: 200px;
+  width: 100%;
   overflow-x: hidden;
   border: 1px solid black;
   background-color: #9C0;
 }
 
-[data-ur-carousel-component="scroll_container"] {
+div[data-ur-carousel-component="scroll_container"] {
   height: 200px;
   display: table-row;
 }
 
-[data-ur-carousel-component="scroll_container"] > * {
+div[data-ur-carousel-component="scroll_container"] > * {
   display:inline-block;
   vertical-align: middle;
   background-color: #3CC;
