Found a flaw in the carousel implementation -- I can't make the scroll container display: table-row, because thats non standard (and it only works on pages with the backwards compatibility mode DOCTYPE -- which is not something we want to use). Working on a fix when the code initializes instead

--- a/tests/css/carousel.css
+++ b/tests/css/carousel.css
@@ -7,7 +7,7 @@ div[data-ur-carousel-component='view_container'] {
 }
 
 div[data-ur-carousel-component="scroll_container"] {
-  display: table-row;
+  display: block;
 }
 
 div[data-ur-carousel-component="scroll_container"] > * {
