--- a/examples/css/carousel.css
+++ b/examples/css/carousel.css
@@ -1,6 +1,8 @@
 div[data-ur-carousel-component='view_container'] {
   height: 200px;
-  width: 100%;
+/* for testing purposes*/
+    width: 100%;
+/*  width: 242px;*/
   overflow-x: hidden;
   border: 1px solid black;
   background-color: #9C0;
@@ -35,6 +37,6 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
 }
 
 div[name='Three'] img{
-    width: 62px;
+    width: 62px !important; /* on iphone without the important, it doesn't work!! */
     height: 62px;
 }
