--- a/examples/css/carousel.css
+++ b/examples/css/carousel.css
@@ -1,6 +1,7 @@
 div[data-ur-carousel-component='view_container'] {
   height: 200px;
-  width: 100%;
+/*  width: 100%;*/
+  width: 307px;
   overflow-x: hidden;
   border: 1px solid black;
   background-color: #9C0;
