Updated tabs widget. It no longer automatically sets the first tab as active if none are set to active (this breaks its usage for accordions w state). This is fine, because relying on the javascript to assign state results in a delay when the page loads

--- a/examples/css/tabs.css
+++ b/examples/css/tabs.css
@@ -29,4 +29,15 @@ position: relative;
   text-align: center;
 }
 
+/* Accordions w state */
 
+div[name='accordions'] *[data-ur-tabs-component='button'] { 
+    display: block;
+    border: 1px solid blue;
+    background-color: white;
+}
+
+div[name='accordions'] *[data-ur-tabs-component='content'] { 
+    background-color: white;
+    margin: 0px 20px;
+}
