Fast swiping bug far from gone (it appeared fixed because i was using similar images in the carousel -- so it fooled the eyes). Fixed the destination index now w fast swiping -- need to fix the tracking through. This is a breaking change ... and will be till the bug is vanquished

--- a/examples/css/carousel.css
+++ b/examples/css/carousel.css
@@ -1,5 +1,5 @@
 div[data-ur-carousel-component='view_container'] {
-  height: 200px;
+  height: 270px;
   width: 100%;
   overflow-x: hidden;
   border: 1px solid black;
@@ -13,7 +13,7 @@ div[data-ur-carousel-component="scroll_container"] {
 div[data-ur-carousel-component="scroll_container"] > * {
   display:inline-block;
   float: left; /* This is important -- otherwise, the carousel can't calculate the accurate total width */
-  background-color: #3CC;
+/*  background-color: #3CC;*/
 }
 
 div[data-ur-carousel-component="button"] {
