--- a/examples/css/intro.css
+++ b/examples/css/intro.css
@@ -5,12 +5,33 @@ body {
 h1 {
   background: #FFE600;
   padding: 5px;
+  font-size: 40px;
+}
+
+#blurb {
+  text-align: center ;
+}
+
+#blurb #headline {
+  font-size: 50px;
+}
+
+#blurb #subline {
+  font-style: italic;
+}
+
+.example {
+  border: 2px solid black;
+  padding: 10px;
+  margin: 5px;
 }
 
 .demonstration {
   margin: 5px;
   float: left;
   width: 300px;
+  border: 1px solid black;
+  padding: 10px;
 }
 
 .explanation {
@@ -18,6 +39,7 @@ h1 {
   margin-left: 330px;
   padding: 5px;
   width: 500px;
+  border: 1px solid black;
 }
 
 .explanation .code {
@@ -25,7 +47,6 @@ h1 {
   border-width: 1px 1px 4px 6px;
   padding: 10px;
   background: #CDCDCD;
-  margin-left: 10px;
 }
 
 /* Toggler Styling */
