--- a/examples/css/toggler.css
+++ b/examples/css/toggler.css
@@ -115,3 +115,13 @@ div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled
 [name='MultipleContents'] [data-ur-toggler-component="content"] {
   display: inline-block;
 }
+
+.code {
+  border: 1px solid gray;
+  border-width: 1px 1px 4px 6px;
+  padding: 10px;
+  background: #DBDBDB;
+  color: black;
+  margin-left: 10px; 
+  font-family: courier;}
+}
