More explanation for the togglers

--- a/examples/css/toggler.css
+++ b/examples/css/toggler.css
@@ -120,7 +120,7 @@ div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled
   border: 1px solid gray;
   border-width: 1px 1px 4px 6px;
   padding: 10px;
-  background: #DBDBDB;
+  background: #E8E8E8;
   color: black;
   margin-left: 10px; 
   font-family: courier;}
