--- a/examples/css/test.css
+++ b/examples/css/test.css
@@ -4,6 +4,15 @@
   padding: 0px 10px 10px;
 }
 
+.code {
+  border: 1px solid gray;
+  border-width: 1px 1px 4px 6px;
+  padding: 10px;
+  background: #E8E8E8;
+  color: black;
+  margin-left: 10px; 
+  font-family: courier;}
+
 h1 {
     font-size: 20px;
 }
