--- a/examples/css/toggler.css
+++ b/examples/css/toggler.css
@@ -1,11 +1,11 @@
 *[data-ur-toggler-component='button'] { 
   opacity: 0.5;
-  background-color: #33CC00;	
+  background-color: #FFE600;	
 }
 
 *[data-ur-toggler-component='content'] {
   display:none;
-  background-color: #BBCCFF;
+  background-color: #FFFFAA;
 }
 
 *[data-ur-toggler-component='button'][data-ur-state='enabled'] {
@@ -23,7 +23,7 @@
 
 div[name='Dialog'] *[data-ur-toggler-component='button'] {
   border-radius: 5px;
-  background-color: #77F;
+  background-color: #FFE600;
   opacity: 1.0;
   padding: 5px;
 }
@@ -50,7 +50,7 @@ div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled
 
 .popup_button, .popup_button > span{
   border-radius: 5px;
-  background-color: #77F;
+  background-color: #FFE600;
   opacity: 1.0;
   padding: 5px;
   display: inline;
