--- a/examples/css/test.css
+++ b/examples/css/test.css
@@ -11,7 +11,8 @@
   background: #E8E8E8;
   color: black;
   margin-left: 10px; 
-  font-family: courier;}
+  font-family: courier;
+  text-align: left;}
 
 h1 {
     font-size: 20px;
