Fiddling about with the CSS

--- a/examples/css/tabs.css
+++ b/examples/css/tabs.css
@@ -29,6 +29,10 @@ position: relative;
   text-align: center;
 }
 
+*[data-ur-tabs-id="html"] {
+  text-align: left;
+}
+
 /* Accordions w state */
 
 div[name='accordions'] *[data-ur-tabs-component='button'] { 
