--- a/examples/css/select_lists.css
+++ b/examples/css/select_lists.css
@@ -1,7 +1,11 @@
 [data-ur-state='enabled'] {
-  background-color: #33CC00;	
+  background-color: white;	
 }
 
 span {
     display: block;
+}
+
+*[data-ur-select-list-component="content"][data-ur-state="enabled"] {
+  background-color: #336699;
 }
