--- a/examples/css/test.css
+++ b/examples/css/test.css
@@ -14,12 +14,6 @@
   font-family: courier;
   text-align: left;}
 
-h1 {
-    font-size: 20px;
-}
-h2 {
-    font-size: 18px;
-}
-h3 {
-    font-size: 16px;
+body {
+  font-family: sans-serif;
 }
