--- a/examples/css/tabs.css
+++ b/examples/css/tabs.css
@@ -29,7 +29,7 @@ position: relative;
   text-align: center;
 }
 
-*[data-ur-tabs-id="html"] {
+*[data-ur-set="tabs"][data-ur-tab-id="html"] {
   text-align: left;
 }
 
