--- a/examples/css/swipe_toggle.css
+++ b/examples/css/swipe_toggle.css
@@ -30,3 +30,24 @@
 [data-ur-touched="true"]{
   background: green;
 }
+
+// image switch
+.imageSwitcher {
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+.imageSwitcher > *{
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  width: inherit;
+  height: inherit;
+}
+.imageSwitcher > [data-ur-state="active"]{
+  z-index: 1;
+  opacity: 1;
+}
+
+
+
