page title tweaks

--- a/examples/site/_layouts/default.html
+++ b/examples/site/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>{{ page.title }}</title>
+    <title>Uranium JS | {{ page.title }}</title>
     <script src="{{site.url}}src/uranium-pretty.js"></script>
     <link rel="stylesheet" type='text/css' href='{{site.url}}stylesheets/style_index_yellow.css' />
     <link rel="stylesheet" type='text/css' href='{{site.url}}stylesheets/base.css' />
