--- a/examples/site/stylesheets/sass/_toggler.sass
+++ b/examples/site/stylesheets/sass/_toggler.sass
@@ -28,6 +28,7 @@ body#togglers_page
     -moz-border-radius: 5px
     border-radius: 5px
     margin-bottom: 15px
+    overflow: scroll
 
   // Popup examples
 
