--- a/examples/site/stylesheets/base.css
+++ b/examples/site/stylesheets/base.css
@@ -962,3 +962,30 @@ body#zoom_preview_examples_page .normal_image {
 
 #widget_list_page #widget_detail li {
   padding-bottom: 5px; }
+
+body#more_page [data-ur-set="toggler"] {
+  background: none;
+  border: none; }
+  body#more_page [data-ur-set="toggler"] [data-ur-toggler-component="button"] {
+    width: 250px; }
+  body#more_page [data-ur-set="toggler"] [data-ur-toggler-component="content"] {
+    display: none;
+    width: 250px; }
+    body#more_page [data-ur-set="toggler"] [data-ur-toggler-component="content"][data-ur-state="enabled"] {
+      display: block; }
+  body#more_page [data-ur-set="toggler"] .bio {
+    background: #323232;
+    padding: 5px;
+    margin: 10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px; }
+    body#more_page [data-ur-set="toggler"] .bio p {
+      color: silver; }
+  body#more_page [data-ur-set="toggler"] img {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
