--- a/examples/site/stylesheets/sass/_resizer.sass
+++ b/examples/site/stylesheets/sass/_resizer.sass
@@ -2,7 +2,7 @@ body#font_resizer_page
   p[data-ur-font-resizer-component="content"]
     color: black
   
-body#font_resizer_examples_page
+body#font_resizer_page
   .font_resizer
     background: #C0C0C0
     color: #323232
