--- a/examples/site/stylesheets/sass/_select_buttons.sass
+++ b/examples/site/stylesheets/sass/_select_buttons.sass
@@ -1,7 +1,7 @@
 body#select_buttons_page
   [data-ur-select-buttons-component]
     border-radius: 5px
-    display: block
+    display: inline-block
     width: 30px
     height: 20px
     text-align: center
