select buttons, select list WIP

--- a/examples/site/stylesheets/sass/_select_lists.sass
+++ b/examples/site/stylesheets/sass/_select_lists.sass
@@ -19,8 +19,7 @@ body#select_list_page
             font-size: 18px
             font-family: Rockwell
             text-align: center
-
-body#select_list_examples_page
+            list-style: none
   [data-ur-set="select-list"]
   [data-ur-id="MyUIDSelectList"][data-ur-select-list-component="content"]
     color: #FAFAFA
